[workspace]

members = [
    "scoring",
]

# When doing `testground run`, the plan directory (e.g. smoke) is copied to the testground working
# directory ($TESTGROUND_HOME/data/work/requests), and then the build starts. So each plan directory
# should have its Cargo.lock.
exclude = [
    "smoke",
]

[patch]
[patch.crates-io]
types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz_types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_serde_utils = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
tree_hash = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_hashing = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz_derive = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
tree_hash_derive = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }