[workspace]

members = [
    "smoke",
    "censoring",
    "scoring",
]

[patch]
[patch.crates-io]
types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz_types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_serde_utils = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
tree_hash = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_hashing = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz_derive = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
tree_hash_derive = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }