[package]
name = "censoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
delay_map = "0.1.1"

# TODO: update libp2p once the next version has been released.
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "26215286391cc277270d6bbc88d3b2fc0de54c7d", default-features = false, features = ["gossipsub", "dns", "tcp", "tokio", "noise", "mplex", "yamux", "serde"] }

# This is a fork of `libp2p` in order to implement malicious behaviour in the `attacker` module.
# This `libp2p-testground` is used in `attacker` module instead of `libp2p`.
# See https://github.com/ackintosh/rust-libp2p/pull/50
libp2p-testground = { git = "https://github.com/ackintosh/rust-libp2p.git", rev = "8e8be3f465cb9815fd84184c32805541db546aa7", package = "libp2p", default-features = false, features = ["gossipsub", "dns", "tcp", "tokio", "noise", "mplex", "yamux", "serde"] }

rand = "0.8.5"
serde = "1.0.139"
serde_json = "1.0.82"
testground = "0.4"
tokio = { version = "1.20.0", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

prometheus-client = { version = "0.19.0", features = ["protobuf"] }

prost = "0.11"
