[package]
name = "emulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
delay_map = "0.1.1"

# TODO: Switch back from the forked one, once libp2p-gossipsub supports protobuf encoding.
#libp2p = { version = "0.46.1", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }
# `prometheus-ptotobuf-support` branch (libp2p v0.48)
libp2p = { git = "https://github.com/ackintosh/rust-libp2p.git", rev = "9f6351f79c5376a8812a87630d9ca6bac3abc1a7", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }

# This is a fork of `libp2p` in order to emulate malicious behaviour.
# This `libp2p-testground` is used in `attacker` module instead of `libp2p`.
# See https://github.com/ackintosh/rust-libp2p/pull/50
libp2p-testground = { git = "https://github.com/ackintosh/rust-libp2p.git", branch = "testground", package = "libp2p", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }

rand = "0.8.5"
serde = "1.0.139"
serde_json = "1.0.82"
# TODO: Update once the version next (v0.3.1) has been released.
testground = { git = "https://github.com/testground/sdk-rust.git", rev = "d6af289b7ce0d58185b4918f424c7f2aacdd4200" }
tokio = { version = "1.20.0", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

# TODO: Switch back from the forked one, once the PR is merged.
# https://github.com/prometheus/client_rust/pull/83
prometheus-client = { git = "https://github.com/ackintosh/client_rust.git", rev = "639cb0a6d4de5d23dc0d49388e475812cf7c2973", features = ["protobuf"] }

prost = "0.11"
