[package]
name = "emulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
delay_map = "0.1.1"

# TODO: Switch back from the forked one, once https://github.com/libp2p/rust-libp2p/pull/2911 has been merged.
# The PR is a work to enable `protobuf` feature of prometheus-client.
# See https://github.com/libp2p/rust-libp2p/pull/2911 for the progress.
libp2p = { git = "https://github.com/ackintosh/rust-libp2p.git", rev = "7eb216f4c259c8f5b6f23dbdc044b45e8a38c2e5", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }

# This is a fork of `libp2p` in order to emulate malicious behaviour.
# This `libp2p-testground` is used in `attacker` module instead of `libp2p`.
# See https://github.com/ackintosh/rust-libp2p/pull/50
libp2p-testground = { git = "https://github.com/ackintosh/rust-libp2p.git", branch = "testground", package = "libp2p", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }

rand = "0.8.5"
serde = "1.0.139"
serde_json = "1.0.82"
# TODO: Update once the version next (v0.3.1) has been released.
testground = { git = "https://github.com/testground/sdk-rust.git", rev = "d6af289b7ce0d58185b4918f424c7f2aacdd4200" }
tokio = { version = "1.20.0", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

# TODO: Switch back from the forked one, once v0.19 has been released.
# The revision specified here is contained this PR:
# https://github.com/prometheus/client_rust/pull/93
prometheus-client = { git = "https://github.com/ackintosh/client_rust.git", rev = "5e145bb0cb52ab4ff01c862a6117fb61ee107f17", features = ["protobuf"] }

prost = "0.11"
