[package]
name = "episub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
delay_map = "0.1.1"

libp2p = { version = "0.48.0", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }
serde_json = "1.0"
serde = "1.0"
testground = "0.4.0"
tokio = { version = "1.21.2", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
# This is ridiculous
gen_topology = { git = "https://github.com/sigp/gossipsub-testground", branch = "episub" }
# gen_topology = { path = "../utils/gen_topology" }
futures = "0.3.24"
npg = { git = "https://github.com/sigp/eth-npg", rev = "0005322440f3f65a8c1f1d0f267a47c19b3320a1" }

[patch]
[patch.crates-io]
types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz_types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_serde_utils = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
tree_hash = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_hashing = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
eth2_ssz_derive = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
tree_hash_derive = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }
