[package]
name = "scoring-parameters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
futures = "0.3.24"
libp2p = { git = "https://github.com/ackintosh/rust-libp2p.git", branch = "prometheus-ptotobuf-support", default-features = false, features = ["gossipsub", "dns-tokio", "tcp-tokio", "noise", "mplex", "yamux", "serde"] }
npg = { git = "https://github.com/ackintosh/eth-npg", rev = "02d8dbff1337ac36b465b598ee467080c7f37f09" }
prometheus-client = { git = "https://github.com/prometheus/client_rust.git", rev = "682b24ee8c6c857b76c0683b1dd7df5a97b75c27", features = ["protobuf"] }
serde_json = "1.0"
serde = "1.0"
testground = "0.4.0"
tokio = { version = "1.21.2", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
types = { git = "https://github.com/divagant-martian/lighthouse", branch = "sizes" }

gen_topology = { git = "https://github.com/sigp/gossipsub-testground", branch = "episub" }

[patch]
[patch.crates-io]
types = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
eth2_ssz = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
eth2_ssz_types = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
eth2_serde_utils = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
tree_hash = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
eth2_hashing = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
eth2_ssz_derive = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }
tree_hash_derive = { git = "https://github.com/divagant-martian/lighthouse", rev = "22fda6cae62c858bd3b1c057700406a7bb358c97" }