[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = [ "std" ]}
delay_map = "0.1.1"

prometheus-client = { version = "0.19.0", features = ["protobuf"] }
# TODO: update libp2p once the next version has been released.
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "26215286391cc277270d6bbc88d3b2fc0de54c7d", default-features = false, features = ["gossipsub", "dns", "tcp", "tokio", "noise", "mplex", "yamux", "serde"] }
serde_json = "1.0"
serde = "1.0"
testground = "0.4.0"
tokio = { version = "1.21.2", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
gen_topology = { path = "../utils/gen_topology" }
futures = "0.3.24"
npg = { git = "https://github.com/sigp/eth-npg"}
sha2 = "0.10.6"
rand = "0.8.5"
tokio-util = { version = "0.7.4", features = ["time"] }
