[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# unstable branch
gossipsub = { git = "https://github.com/sigp/lighthouse.git", rev = "f8fdb71f50851bf7792e68a4ee31125bd645e19a" }

libp2p = { version = "0.53.2", default-features = false, features = ["dns", "tcp", "tokio", "noise", "yamux", "serde"] }
chrono = { version = "0.4.19", features = [ "std" ]}
delay_map = "0.1.1"
prometheus-client = { version = "0.22.2", features = ["protobuf"] }
serde_json = "1.0"
serde = "1.0"
testground.workspace = true
tokio = { version = "1.21.2", features = ["macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
gen_topology = { path = "../utils/gen_topology" }
futures = "0.3.24"
npg = { git = "https://github.com/sigp/eth-npg"}
sha2 = "0.10.6"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio-util = { version = "0.7.4", features = ["time"] }
